# lab_02

./: CMakeLists.txt  README.md  main.cpp
include/: three.h
src/: three.cpp
test/: test_three.cpp
